Dark mode CSS – Fix Notifications' color (button)
screenshot: before/after + after with hover https://prnt.sc/gxkmrv

--- a/style/client.css
+++ b/style/client.css
@@ -113,6 +113,17 @@ select {
 .dark a.button:active {
 	background: linear-gradient(to bottom,  #cfcfcf,  #f2f2f2);
 } */
+
+.dark .button.notifying {
+	background: #6BACC5;
+	border-color: #2C9CC1;
+}
+
+.dark .button.notifying:hover {
+	background: #6BACC5;
+	border-color: #FFFFFF;
+}
+
 .dark a.button:visited {
 	color: #F9F9F9;
 }
